[css-grid] Height percentages are not properly resolved for item's children https://bugs.webkit.org/show_bug.cgi?id=159258

Reviewed by Sergio Villar Senin.

Source/WebCore:

When grid items are vertically stretched (default behavior)
they store their height on RenderBox::overrideLogicalContentHeight().
In order to resolve the percentage height on the grid item's children
we need to use that size.

Test: fast/css-grid-layout/percent-resolution-grid-item-children.html

* rendering/RenderBox.cpp:
(WebCore::RenderBox::computePercentageLogicalHeight):

LayoutTests:

* fast/css-grid-layout/percent-resolution-grid-item-children-expected.txt: Added.
* fast/css-grid-layout/percent-resolution-grid-item-children.html: Added.


Canonical link: https://commits.webkit.org/177586@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202856 268f45cc-cd09-0410-ab3c-d52691b4dbfc